testsuite/tests/package/package07e.hs
module Package07e where
import MyHsTypes
import GHC.IR.Haskell.Type
import GHC.IR.Haskell.Utils
import GHC.Data.Unique.FiniteMap
